start implementing create work from routing

--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -23,9 +23,7 @@
     </div>
 <% end %>
 
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+<%= render 'shared/flash_message' %>
 
 <%= render 'fields' %>
 
