--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -3,9 +3,7 @@
 
       <legend>Change tag</legend>
 
-      <% flash.each do |key, value| %>
-          <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
+      <%= render 'shared/flash_message' %>
 
       <%= render 'fields', :f => f %>
 
