--- a/app/views/works/_fields.html.erb
+++ b/app/views/works/_fields.html.erb
@@ -63,3 +63,7 @@
       //console.log($("form#new_work"));
   }
 </script>
+
+<%= render 'work_categories_js' %>
+
+<%= render 'work_form_time_adjust_js' %>
