--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -4,12 +4,9 @@
 
 <%= render 'works'%>
 
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+<%= render 'shared/flash_message' %>
 
 <%= render 'fields' %>
 
-<%= render 'work_categories_js' %>
+<%= render 'routines' %>
 
-<%= render 'work_form_time_adjust_js' %>
