--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,9 +15,7 @@
   </table>
 <% end %>
 
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+<%= render 'shared/flash_message' %>
 
 <%= form_for(@category, :html => { :class => "well form-inline" }) do |f| %>
     <fieldset>
