--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -11,9 +11,7 @@
 </div>
 <div class="clearfix"></div>
 
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+<%= render 'shared/flash_message' %>
 
 <% unless @user.sources.empty? %>
 
