--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -13,9 +13,7 @@
     </table>
 <% end %>
 
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+<%= render 'shared/flash_message' %>
 
 <%= form_for(@tag, :html => { :class => "well form-inline" }) do |f| %>
     <fieldset>
