--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -2992,6 +2992,8 @@ input[type="submit"].btn.btn-mini {
 .breadcrumb .active a {
   color: #333333;
 }
+
+/*
 .pagination {
   height: 36px;
   margin: 18px 0;
@@ -2999,7 +3001,7 @@ input[type="submit"].btn.btn-mini {
 .pagination ul {
   display: inline-block;
   *display: inline;
-  /* IE7 inline-block hack */
+
 
   *zoom: 1;
   margin-left: 0;
@@ -3054,6 +3056,7 @@ input[type="submit"].btn.btn-mini {
 .pagination-right {
   text-align: right;
 }
+*/
 .pager {
   margin-left: 0;
   margin-bottom: 18px;
