--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -1,9 +1,12 @@
 
-<form class="form-search form-horizontal pull-left">
+<form action="<%= request.fullpath %>" method="GET" class="form-search form-horizontal pull-left">
   Filter content by tag:
-  <input type="text" class="input-mini search-query">
+  <input type="text" class="input-small search-query" name="tag_name" value="<%= params['tag_name'] %>" data-source='[<%= get_user_tags %>]' data-items="5" data-provide="typeahead">
   <button type="submit" class="btn btn-mini">Filter</button>
 </form>
+<script language="JavaScript">
+    $('.typeahead').typeahead();
+</script>
 
 <div class="pull-right" style="padding-top: 5px;">
     <%= link_to "Add content", new_source_path, :class=>'btn btn-info btn-mini' %>
