--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,29 +1,35 @@
-<% unless @user.tags.empty? %>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>Tag</th>
-        <th></th>
-        <th></th>
-      </tr>
-      </thead>
+<div class="span6">
+    <% unless @user.tags.empty? %>
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th>Tag</th>
+            <th></th>
+            <th></th>
+          </tr>
+          </thead>
 
-      <%= render @tags %>
+          <%= render @tags %>
 
-    </table>
-<% end %>
+        </table>
+    <% end %>
 
-<%= render 'shared/flash_message' %>
+    <%= render 'shared/flash_message' %>
 
-<%= form_for(@tag, :html => { :class => "well form-inline" }) do |f| %>
-    <fieldset>
+    <%= form_for(@tag, :html => { :class => "well form-inline" }) do |f| %>
+        <fieldset>
 
-      <legend>Add new tag</legend>
+          <legend>Add new tag</legend>
 
-      <%= render 'fields', :f => f %>
+          <%= render 'fields', :f => f %>
 
-      <%= f.submit "Add tag", :class=>"btn btn-primary" %>
+          <%= f.submit "Add tag", :class=>"btn btn-primary" %>
 
-    </fieldset>
-<% end %>
+        </fieldset>
+    <% end %>
+</div>
 
+<div class="span3">
+  <h6 style="text-align: center">Tags usage</h6>
+  <p> <%= @tags_cloud%> </p>
+</div>
