--- a/app/views/layouts/_sidebar_signin.html.erb
+++ b/app/views/layouts/_sidebar_signin.html.erb
@@ -3,14 +3,14 @@
     <ul class="nav nav-list">
       <li class="nav-header">Actions</li>
       <li class="<%= active_menu?('works') %>"><%= link_to "Works", work_path(current_user) %></li>
-      <li class="<%= active_menu?('') %>"><a href="#">Search</a></li>
+      <li class="<%= active_menu?('sources') %>"><%= link_to "Posts", source_path(current_user) %></li>
       <li class="<%= active_menu?('') %>"><a href="#">Reports</a></li>
-      <li class="<%= active_menu?('sources') %>"><%= link_to "Resources", source_path(current_user) %></li>
+      <li class="<%= active_menu?('') %>"><a href="#">Search</a></li>
       <li class="nav-header">Settings</li>
       <li class="<%= active_menu?('users') %>"><%= link_to "Profile", user_path(current_user) %></li>
       <li class="<%= active_menu?('routines') %>"><%= link_to "Routines", routine_path(current_user) %></li>
       <li class="<%= active_menu?('categories') %>"><%= link_to "Categories", category_path(current_user) %></li>
       <li class="<%= active_menu?('tags') %>"><%= link_to "Tags", tag_path(current_user) %></li>
     </ul>
-  </div><!--/.well -->
-</div><!--/span-->
+  </div>
+</div>
