--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -33,7 +33,7 @@
   <h6 style="text-align: center">Tags usage</h6>
   <p>
     <% @tags_cloud.each do |tag_name, count|%>
-      <%= link_to tag_name+'('+count+')', source_path(current_user, :tag_name => tag_name) %>,
+      <%= link_to tag_name+'('+count+')', source_path(current_user, :tag_name => tag_name) %>
     <% end %>
   </p>
 </div>
