add week picker

--- a/app/views/works/_datepicker.html.erb
+++ b/app/views/works/_datepicker.html.erb
@@ -18,7 +18,7 @@
 
 <script language="JavaScript">
     $("#datepicker").datepicker({
-        buttonImage: '../images/calendar.gif',
+        buttonImage: '/images/calendar.gif',
         buttonImageOnly: true,
         showOn: 'button',
         dateFormat: "yy-mm-dd",
