done mainpart of week presentation

--- a/app/views/works/week.html.erb
+++ b/app/views/works/week.html.erb
@@ -14,13 +14,16 @@
   <tbody>
       <% 7.times do |item| %>
       <tr >
-        <td><%= humanize_days(@week_start_day.cwday().to_s)%>,<br> <%= @week_start_day.mday()%>/<%= @week_start_day.mon()%></td>
-        <td>
+        <td class="valign_middle">
+          <b><%= humanize_days(@week_start_day.cwday().to_s)%></b>,
+          <br> <%= @week_start_day.mday()%>/<%= @week_start_day.mon()%>
+        </td>
+        <td class="valign_middle">
           <% if @works_per_day[@week_start_day.mday()]
                total_min = @works_per_day[@week_start_day.mday()]
                percent = (total_min*100)/(24*60)
           %>
-               Filled at <%=percent%>%, <%= humanize_duration total_min  %> from 24 h.
+               Reported <b><%= humanize_duration total_min  %></b> for this day from 24 h.
           <% else %>
                <% if @week_start_day > Date.today %>
                   <i>Future date</i>
@@ -29,13 +32,15 @@
                <% end %>
           <% end %>
         </td>
-        <td>
-          <div class="progress progress-striped">
+        <td class="valign_middle">
+          <div class="progress progress-striped" style="margin-top:15px;">
             <div class="bar"
-                 style="width: <%= percent || 0 %>%;"></div>
+                 style="width: <%= percent || 0 %>%;"><%= percent || 0 %>%</div>
           </div>
         </td>
-        <td>Edit</td>
+        <td class="valign_middle">
+          <%= link_to("Edit", work_path(current_user, :d=>@week_start_day), :class=>"btn btn-mini") if @week_start_day <= Date.today %>
+        </td>
       </tr>
       <% @week_start_day += 1.day %>
       <% end %>
