fix bug with work for whole day

--- a/app/views/works/_fields.html.erb
+++ b/app/views/works/_fields.html.erb
@@ -24,7 +24,7 @@
 
 <script language="JavaScript" >
   $(document).ready( function() {
-    $("#work_submit_").click( function (){
+    $("#work_submit").click( function (){
         // make validation before adding new activity
         from_h = $("#work_from_4i").val();
         from_m = $("#work_from_5i").val();
@@ -32,6 +32,14 @@
         to_m = $("#work_to_5i").val();
         from_id = parseInt(from_h)*60 + parseInt(from_m);
         to_id = parseInt(to_h)*60 + parseInt(to_m);
+
+        //special case - 23:59 (selected 00;00)
+        if( to_h == "00" && to_m == "00" ) {
+            to_h = "23";
+            to_m = "59";
+            to_id = 1440;
+        }
+
 
         // 1 case - from and start should not be equal
         if( from_h == to_h && from_m == to_m ) {
