fix time adjustment

--- a/app/views/works/_work_form_time_adjust_js.html.erb
+++ b/app/views/works/_work_form_time_adjust_js.html.erb
@@ -2,7 +2,11 @@
     $(document).ready(function () {
         //get first not filled time interval
         from_id =parseInt($('td.timeline_minutes[style*="green;"]:last').attr("id")) + 10;
-        //console.log(from_id );
+        console.log(from_id );
+
+        if( !from_id) {
+            from_id = 0;
+        }
 
         // set from hour time
         $("#work_from_4i [value='"+getHourFromId(from_id)+"']").attr("selected", "selected");
@@ -13,7 +17,6 @@
         to_id = from_id + 60;
         $("#work_to_4i [value='"+getHourFromId(to_id)+"']").attr("selected", "selected");
         $("#work_to_5i [value='"+getMinutesFromId(to_id)+"']").attr("selected", "selected");
-
     });
 
     function getHourFromId( id ) {
